--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ header
 
 .Hero {
     position: absolute;
-    width: 1200px;
     margin-left: 0px;
     margin-top: 0px;
 }
@@ -63,6 +62,7 @@ h1 {
     margin-top: 275px;
     text-transform: uppercase;
     font-size: 70px;
+    margin-left: 300px;
 }
 
 .button {
@@ -84,5 +84,5 @@ h1 {
 
 .btn:hover {
     background-color: darkorange;
-}
 
+}
