--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,28 +96,21 @@ h1 {
     }
 
 .top-content {
-    background-color: black;
     font-size: 20px;
     text-align: center;
     color: white;
     width: 100%;
     height: 300px;
-    padding: 90px;
+    padding-top: 200px;
+    margin-bottom: 80px;
     box-sizing: border-box;
     }
 
 #bullet{
-    color: black;
+    color: #ffF;
     font-weight: bold;
     font-size: 30px;
     margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-#bluetext{
-    color: navy;
-    font-weight: bold;
-    font-size: 20px;
     margin-bottom: 10px;
 }
 
@@ -126,7 +119,14 @@ h1 {
     text-align: left;
     word-spacing: 1px;
     line-height: 1.2;
-    color: black;
+    color: #ffF;
     width: 100%;
     margin-bottom: 20px
     }
+
+#list-loc li{
+    display: inline-block;
+    font-size: 20px;
+    margin-right: 20px;
+    color: #ffF !important;
+}
