--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,9 @@ h1 {
 
 #headline {
     font-size: 30px;
+    font-weight: bold;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     }
 
 .top-content {
@@ -100,33 +101,37 @@ h1 {
     text-align: center;
     color: white;
     width: 100%;
-    height: 300px;
-    padding-top: 200px;
+    padding-top: 180px;
     margin-bottom: 80px;
-    box-sizing: border-box;
     }
 
 #bullet{
     color: #ffF;
+    text-align: center;
     font-weight: bold;
     font-size: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .content-page {
     font-size: 18px;
-    text-align: left;
+    text-align: center;
     word-spacing: 1px;
     line-height: 1.2;
     color: #ffF;
     width: 100%;
-    margin-bottom: 20px
+    margin-bottom: 50px;
     }
 
+.location {
+    margin-top: 120px;
+    text-align: center;
+}
 #list-loc li{
     display: inline-block;
     font-size: 20px;
-    margin-right: 20px;
+    text-align: center;
     color: #ffF !important;
+    margin-bottom: 10px;
+    margin-right: 20px;
 }
