--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,3 +133,37 @@ h1 {
     margin-bottom: 10px;
     margin-right: 20px;
 }
+
+.box-1 , #img-1{
+    width: 150px;
+    height: auto;
+    text-align: center;
+    margin-right: 100px;
+    margin-top: 50px;
+
+}
+
+.box-2 , #img-2{
+    width: 150px;
+    height: auto;
+    text-align: center;
+    margin-right: 100px;
+
+}
+
+.box-3 , #img-3{
+    width: 150px;
+    height: auto;
+    text-align: center;
+    margin-right: 100px;
+
+}
+.card {
+    text-align: center;
+}
+
+.container {
+    width: 100%;
+    display: inline-block;
+}
+
