--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,14 @@
-
 * {
-    margin : 0;
-    padding : 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: monospace;
-    background-image : linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/iceCream.jpg);
-    height : 100vh;
-    background-size : cover;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/iceCream.jpg);
+    height: 100vh;
+    background-size: cover;
     background-position: center;
-}
-
-header
- {
-    
 }
 
 .row {
@@ -36,20 +30,25 @@ header
     color: white;
     text-decoration: none;
     padding: 5px 20px;
-    font-family: "Roboto" , sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 15px;
 }
 
-.main-nav li a:hover
-    {
-        border: 1px solid white;
-    }
+.main-nav li a:hover {
+    border: 1px solid white;
+}
 
 .logo img {
-    width: 150px;
+    margin-top: 1%;
+    width: 120px;
     height: auto;
     float: left;
-    
+
+}
+
+.page-active {
+    font-size: 120%;
+    font-weight: bold;
 }
 
 .Hero {
@@ -69,7 +68,7 @@ h1 {
 
 .button {
     margin-top: 30px;
-    margin-left: 500px; 
+    margin-left: 500px;
 
 }
 
@@ -94,7 +93,7 @@ h1 {
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
-    }
+}
 
 .top-content {
     font-size: 15px;
@@ -102,9 +101,9 @@ h1 {
     color: white;
     padding-top: 140px;
     margin-bottom: 60px;
-    }
+}
 
-#bullet{
+#bullet {
     color: #ffF;
     text-align: center;
     font-weight: bold;
@@ -119,13 +118,14 @@ h1 {
     line-height: 1.2;
     color: #ffF;
     margin-bottom: 40px;
-    }
+}
 
 .location {
     margin-top: 60px;
     text-align: center;
 }
-#list-loc li{
+
+#list-loc li {
     display: inline-block;
     font-size: 15px;
     text-align: center;
@@ -134,7 +134,7 @@ h1 {
     margin-right: 20px;
 }
 
-.box-1 , #img-1{
+.box-1 {
     width: 150px;
     height: auto;
     text-align: center;
@@ -143,7 +143,7 @@ h1 {
 
 }
 
-.box-2 , #img-2{
+.box-2 {
     width: 150px;
     height: auto;
     text-align: center;
@@ -151,13 +151,27 @@ h1 {
 
 }
 
-.box-3 , #img-3{
+.box-3 {
     width: 150px;
     height: auto;
     text-align: center;
 }
-.card{
+
+.box-4 {
+    width: 150px;
+    height: auto;
     text-align: center;
+}
+
+.card {
+    margin-top: 3%;
+    position: relative;
+}
+
+.card-menu {
+    margin-top: 3%;
+    position: relative;
+    margin-left: 12%;
 }
 
 .container {
@@ -171,4 +185,12 @@ h2 {
     margin: 0;
 }
 
-
+#img-1,
+#img-2,
+#img-3,
+#img-4 {
+    float: left;
+    width: 200px;
+    margin-left: 100px;
+    border-radius: 10%;
+}
